--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ Shiny app/rsconnect
 Temperature analysis/Models
 Temperature analysis/Prediction Data all.Rds
 Temperature analysis/Model outputs and validations/modellf_predictions_all.Rds
+Temperature analysis/Model outputs and validations/newdata_all_sum.Rds
